--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,9 +24,11 @@
         </activity>
         <activity android:name=".ui.HttpActivity">
         </activity>
-        <activity android:name=".ui.FormActivity">
-        </activity>
         <activity android:name=".ui.PostActivity">
+        </activity>
+        <activity android:name=".ui.HeaderActivity">
+        </activity>
+        <activity android:name=".ui.UrlActivity">
         </activity>
     </application>
 
